--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@ textarea{
     max-width:250px;
 }
 body {
-    color: rgb(7, 187, 241);
+    color: rgb(169, 131, 218);
     text-align: center;
     font-size: large;
-
+    font-weight: bold;
 }
+
+
 h1 {
-    color: rgb(129, 220, 248);
+    color: rgb(166, 88, 211);
 
 }
